Created form. Added normalize-form and reset css to screen.css file

--- a/pp-03/index.html
+++ b/pp-03/index.html
@@ -7,6 +7,24 @@
   <link rel="stylesheet" media="screen" href="screen.css" />
 </head>
 <body>
-
+  <form method="get" action="#null">
+    <ol>
+      <li id="input-email">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" placeholder="you@example.com" pattern="^.+@.+$" />
+      </li>
+      <li id="input-phone">
+        <label for="phone">Phone Number</label>
+        <input type="phone" name="phone" id="phone" placeholder="111-222-3333" pattern="^.+@.+$" />
+      </li>
+      <li id="input-dob">
+        <label for="dob">Date of Birth</label>
+        <input type="dob" name="dob" id="dob" placeholder="11/26/1996" pattern="^.+@.+$" />
+      </li>
+      <li id="input-submit">
+        <input type="submit" name="submit" id="submit" value="Submit" />
+      </li>
+    </ol>
+  </form>
 </body>
 </html>
