Changed input properties for phone number and date of birth

--- a/pp-03/index.html
+++ b/pp-03/index.html
@@ -15,11 +15,11 @@
       </li>
       <li id="input-phone">
         <label for="phone">Phone Number</label>
-        <input type="phone" name="phone" id="phone" placeholder="111-222-3333" pattern="^.+@.+$" />
+        <input type="number" name="phone" id="phone" placeholder="111-222-3333" inputmode="numeric" />
       </li>
       <li id="input-dob">
         <label for="dob">Date of Birth</label>
-        <input type="dob" name="dob" id="dob" placeholder="11/26/1996" pattern="^.+@.+$" />
+        <input type="date" name="dob" id="dob" placeholder="11/26/1996"/>
       </li>
       <li id="input-submit">
         <input type="submit" name="submit" id="submit" value="Submit" />
